# cool_logs

./: Cargo.toml  question.md  recap.excalidraw
src/: main.rs
src/logging/: adb.rs  mod.rs
src/logging/adb/: mod.rs  strategies.rs
src/ui/: mod.rs
