[package]
name = "cool_logs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
tokio = { version = '1.18.1', features = ['full'] }
async-trait = "0.1.53" 
lazy_static = "1.4.0"
tokio-stream = { version = "0.1.8", features = ['io-util'] }
